Comment Box and Attachment box Alignment fixed in closing checklist

--- a/angular/src/app/main/checklist/createtask/createtask.component.css
+++ b/angular/src/app/main/checklist/createtask/createtask.component.css
@@ -30,8 +30,8 @@
 }  
 
 ::ng-deep .uppy-Dashboard-inner {
-    min-height:300px !important;
-    height: 300px !important;
+    min-height:273px !important;
+    height: 273px !important;
 }
 .category-selector button {
     width: 100%;
